// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/4a84ff/4a84ff"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/4a84ff/4a84ff"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Owner title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Owner description
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
        >
          Lorem ipsum…
        </p>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "margin": "5px 10px 5px 0",
            }
          }
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/4a84ff/4a84ff"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/4a84ff/4a84ff"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Owner title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Owner description
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
        >
          Custom title
        </p>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "margin": "5px 10px 5px 0",
            }
          }
        />
        <span
          className="k-u-size-micro k-u-weight-regular"
        >
          Custom subtitle
        </span>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/4a84ff/4a84ff"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/4a84ff/4a84ff"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Owner title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Owner description
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
        >
          Lorem ipsum…
        </p>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "margin": "5px 10px 5px 0",
            }
          }
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
